kuard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
