kuard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
#  annotations:
#    kubernetes.io/ingress.class: "lovegress"
#    bla: "lovegress"
#    bl2a: "lovegress"
spec:
  rules:
    - host: kuard.example.com
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 8080
    - host: kuard.dev.example.com
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 8080
