kuard/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: non-kuard
  annotations:
    kubernetes.io/ingress.class: "lovegress"
#    bla: "lovegress"
#    bl2a: "lovegress"
spec:
  rules:
    - host: random.example.com
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 8080
